[project]
name = "xplab"
version = "0.1.0"
description = "An exploring lab in AI."
authors = [
    {name = "p3ngf3i",email = "v3nooom@outlook.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
